--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@poppanator/sveltekit-svg": "^0.3.2",
     "@supabase/supabase-js": "^1.35.3",
     "cookie": "^0.5.0",
-    "daisyui": "^2.15.2"
+    "daisyui": "^2.15.2",
+    "theme-change": "^2.0.2"
   }
 }
