--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+
+    "electron": "concurrently --kill-others \"svelte-kit dev\" \"electron src/electron.cjs\"",
+    "dev:package": "npm run build && electron-builder --config electron-builder.config.json --dir",
+    "package": "npm run build && electron-builder --config electron-builder.config.json"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
@@ -19,6 +23,9 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
+    "concurrently": "^7.2.2",
+    "electron-builder": "^23.1.0",
+    "electron-reloader": "^1.2.3",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -41,6 +48,10 @@
     "@supabase/supabase-js": "^1.35.3",
     "cookie": "^0.5.0",
     "daisyui": "^2.15.2",
+    "electron": "^19.0.6",
+    "electron-serve": "^1.1.0",
+    "electron-window-state": "^5.0.3",
+    "idb": "^7.0.2",
     "theme-change": "^2.0.2"
   }
 }
