--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,14 +27,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "allowJs": true,
-    "checkJs": true,
-    "paths": {
-      "$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"],
-      "$api/*": ["src/api/*"],
-      "$assets/*": ["src/api/*"],
-      "$content/*": ["src/content/*"],
-    }
+    "checkJs": true
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
