--- a/package.json
+++ b/package.json
@@ -14,43 +14,48 @@
     "dev:package": "npm run build && electron-builder --config electron-builder.config.json --dir"
   },
   "devDependencies": {
+    "@floating-ui/dom": "^1.0.1",
+    "@popperjs/core": "^2.11.6",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "@tailwindcss/typography": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "autoprefixer": "^10.4.7",
-    "concurrently": "^7.2.2",
-    "electron-builder": "^23.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "autoprefixer": "^10.4.8",
+    "classnames": "^2.3.1",
+    "concurrently": "^7.3.0",
+    "electron-builder": "^23.3.3",
     "electron-reloader": "^1.2.3",
-    "eslint": "^8.16.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "flowbite-svelte": "^0.26.0",
     "mdsvex": "^0.10.6",
     "nprogress": "^0.2.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.6",
-    "tailwindcss": "^3.0.24",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.9.0",
+    "svelte-heros": "^2.3.5",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
-    "typescript": "~4.7.2",
-    "vite": "^2.9.14"
+    "typescript": "~4.8.2",
+    "vite": "^3.0.9"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.5.8",
+    "@fontsource/fira-mono": "^4.5.9",
     "@lukeed/uuid": "^2.0.0",
-    "@poppanator/sveltekit-svg": "^0.3.2",
-    "@supabase/supabase-js": "^1.35.3",
+    "@poppanator/sveltekit-svg": "^1.0.0",
+    "@supabase/supabase-js": "^1.35.6",
     "cookie": "^0.5.0",
-    "daisyui": "^2.15.2",
-    "electron": "^19.0.6",
+    "daisyui": "^2.24.0",
+    "electron": "^20.1.0",
     "electron-serve": "^1.1.0",
     "electron-window-state": "^5.0.3",
     "idb": "^7.0.2",
-    "theme-change": "^2.0.2"
+    "theme-change": "^2.2.0"
   }
 }
