--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@popperjs/core": "^2.11.6",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/cookie": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
